@@ -1,7 +1,9 @@
 package Gym;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class FilePath {
-    final Path customerFile = Path.of("src/Gym/customers.txt");
+    static final Path filePath = Paths.get("src/Gym/customers.txt");
+    static final Path visitsFilePath = Paths.get("src/Gym/memberVisitDates.txt");
 }
